hphp/test/zend/bad/ext/standard/tests/file/popen_pclose_error-win32.php.skipif
<?php
if (substr(PHP_OS, 0, 3) != 'WIN') die("skip Valid only on Windows");
if (PHP_DEBUG) die("skip Not Valid for debug builds");
?>
